Closed Bug 724999 Opened 14 years ago Closed 14 years ago

IonMonkey: Assertion failure: !entered && i < mLength, at ./dist/include/js/Vector.h:373

Categories

(Core :: JavaScript Engine, defect)

Other Branch
x86_64
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Assigned: jandem)

References

Details

(Keywords: assertion, testcase)

Attachments

(1 file)

The following testcase asserts on ionmonkey revision c34398f961e7 (run with --ion -n -m), tested on 64 bit: function nsieve(m, isPrime){ for (i=2; i<=m; (g.args[i])){ for (k=i+i; k<=m; k+=i) isPrime[k] = false; break; } } var ret = 0; for (var i = 1; i <= 3; i++ ) { var m = (1<<i)*10000; var flags = Array(m+(0XeE0c )); ret += nsieve(m, flags); }
Attached patch PatchSplinter Review
Missing some cases for for-loops in IonBuilder::isLoop. Patch fixes the test and passes jit-tests. Surprising that this didn't cause jit-test failures.
Assignee: general → jdemooij
Status: NEW → ASSIGNED
Attachment #595148 - Flags: review?(dvander)
Attachment #595148 - Flags: review?(dvander) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/ion/bug724999.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: