Add some missing cases to IonBuilder::isLoop (bug 724999, r=dvander)