js/src/ion/IonBuilder.h
@@ -160,6 +160,9 @@ class IonBuilder : public MIRGenerator
               case DO_WHILE_LOOP_BODY:
               case WHILE_LOOP_COND:
               case WHILE_LOOP_BODY:
+              case FOR_LOOP_COND:
+              case FOR_LOOP_BODY:
+              case FOR_LOOP_UPDATE:
                 return true;
               default:
                 return false;
